# fiap-ds-mlops-laptop-pricing-brl

./: .gitignore  Makefile  README.md  data.dvc  mlflow_report.md  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: model_report.yml  notify_api_deployment.yml
docs/: mkdocs.yml
docs/docs/: index.md
models/: register_model.py
notebooks/: data-processing.ipynb  model-development.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
reports/: report.py
tests/: model_test.py
