[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "laptop_pricing_brl"
version = "0.0.1"
description = "Pricing model to be used in evaluation of used equipment."
authors = [
  { name = "Michel Fernandes" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["laptop_pricing_brl"]
force_sort_within_sections = true


